Grails 5 checkpoint