@@ -1,12 +1,11 @@
 buildscript {
     repositories {
         mavenLocal()
-        mavenCentral()
         maven {url 'https://repo.grails.org/grails/core'}
     }
     dependencies {
         classpath "org.grails:grails-gradle-plugin:$grailsVersion"
-        classpath "org.grails.plugins:hibernate5:7.0.0"
+        classpath "org.grails.plugins:hibernate5:$gormVersion"
     }
 }
 
@@ -25,13 +24,8 @@ apply plugin:'org.grails.grails-web'
 
 repositories {
     mavenLocal()
-    mavenCentral()
     maven {url 'https://repo.grails.org/grails/core'}
     maven {url 'https://repo.xh.io/content/groups/public/'}
-}
-
-configurations.all {
-    resolutionStrategy.cacheChangingModulesFor 0, 'seconds'
 }
 
 configurations {
@@ -57,27 +51,29 @@ dependencies {
     // agent "org.springframework:springloaded:1.2.8.RELEASE"
     // runtimeOnly "io.methvin:directory-watcher:0.9.6"
 
-    // Grails 4.0.6 REST Defaults
-    compile "org.springframework.boot:spring-boot-starter-logging"
-    compile "org.springframework.boot:spring-boot-autoconfigure"
-    compile "org.grails:grails-core"
-    compile "org.springframework.boot:spring-boot-starter-actuator"
-    compile "org.springframework.boot:spring-boot-starter-tomcat"
-    compile "org.grails:grails-plugin-url-mappings"
-    compile "org.grails:grails-plugin-rest"
-    compile "org.grails:grails-plugin-codecs"
-    compile "org.grails:grails-plugin-interceptors"
-    compile "org.grails:grails-plugin-services"
-    compile "org.grails:grails-plugin-datasource"
-    compile "org.grails:grails-plugin-databinding"
-    compile "org.grails:grails-web-boot"
-    compile "org.grails:grails-logging"
-    compile "org.grails.plugins:async"
-    compile "org.grails.plugins:events"
-    compile "org.grails.plugins:hibernate5"
+   // Grails 5 REST Defaults
     compileOnly "io.micronaut:micronaut-inject-groovy"
-    console "org.grails:grails-console"
+    implementation "org.springframework.boot:spring-boot-starter-logging"
+    implementation "org.springframework.boot:spring-boot-autoconfigure"
+    implementation "org.grails:grails-core"
+    implementation "org.springframework.boot:spring-boot-starter-actuator"
+    implementation "org.springframework.boot:spring-boot-starter-tomcat"
+    implementation "org.grails:grails-plugin-url-mappings"
+    implementation "org.grails:grails-plugin-rest"
+    implementation "org.grails:grails-plugin-codecs"
+    implementation "org.grails:grails-plugin-interceptors"
+    implementation "org.grails:grails-plugin-services"
+    implementation "org.grails:grails-plugin-datasource"
+    implementation "org.grails:grails-plugin-databinding"
+    implementation "org.grails:grails-web-boot"
+    implementation "org.grails:grails-logging"
+    implementation "org.grails.plugins:async"
+    implementation "org.grails.plugins:events"
+    implementation "org.grails.plugins:hibernate5"
+    implementation "org.hibernate:hibernate-core:5.5.7.Final"
+    implementation "org.hibernate:hibernate-ehcache:5.5.7.Final"
     profile "org.grails.profiles:rest-api"
+
     runtime "com.h2database:h2"
     runtime "org.apache.tomcat:tomcat-jdbc"
 
@@ -85,8 +81,6 @@ dependencies {
     compile "org.bitbucket.b_c:jose4j:0.7.2"
 
     // Toolbox additions/Changes
-    compile "org.hibernate:hibernate-core:5.4.27.Final"
-    compile "org.hibernate:hibernate-ehcache:5.4.27.Final"
     compile "net.sf.ehcache:ehcache:2.10.6"
     compile "org.springframework:spring-websocket"
     runtime "mysql:mysql-connector-java:5.1.47"
@@ -172,34 +166,12 @@ Map hoistMetaData = [
         'info.xh.appBuild': appBuild
 ]
 
-
 def allJvmArgs = [
         '-Dspring.output.ansi.enabled=always',
         '-noverify',
         '-XX:TieredStopAtLevel=1',
         '-Xmx1024m'
 ]
-// Prevent reflection warning: See https://dev.to/erichelgeson/removing-illegal-reflective-access-warnings-in-grails-4-393o
-allJvmArgs += [
-        "java.management/com.sun.jmx.mbeanserver", "java.base/java.io", "java.base/java.lang", "java.base/java.lang.annotation",
-        "java.base/java.lang.invoke", "java.base/java.lang.module", "java.base/java.lang.ref", "java.base/java.lang.reflect",
-        "java.base/java.math", "java.base/java.net", "java.base/java.net.spi", "java.base/java.nio", "java.base/java.nio.channels",
-        "java.base/java.nio.channels.spi", "java.base/java.nio.charset", "java.base/java.nio.charset.spi", "java.base/java.nio.file",
-        "java.base/java.nio.file.attribute", "java.base/java.nio.file.spi", "java.base/java.security", "java.base/java.security.acl",
-        "java.base/java.security.cert", "java.base/java.security.interfaces", "java.base/java.security.spec", "java.base/java.text",
-        "java.base/java.text.spi", "java.base/java.time", "java.base/java.time.chrono", "java.base/java.time.format",
-        "java.base/java.time.temporal", "java.base/java.time.zone", "java.base/java.util", "java.base/java.util.concurrent",
-        "java.base/java.util.concurrent.atomic", "java.base/java.util.concurrent.locks", "java.base/java.util.function",
-        "java.base/java.util.jar", "java.base/java.util.regex", "java.base/java.util.spi", "java.base/java.util.stream",
-        "java.base/java.util.zip", "java.datatransfer/java.awt.datatransfer", "java.desktop/java.applet", "java.desktop/java.awt",
-        "java.desktop/java.awt.color", "java.desktop/java.awt.desktop", "java.desktop/java.awt.dnd", "java.desktop/java.awt.dnd.peer",
-        "java.desktop/java.awt.event", "java.desktop/java.awt.font", "java.desktop/java.awt.geom", "java.desktop/java.awt.im",
-        "java.desktop/java.awt.im.spi", "java.desktop/java.awt.image", "java.desktop/java.awt.image.renderable",
-        "java.desktop/java.awt.peer", "java.desktop/java.awt.print", "java.desktop/java.beans", "java.desktop/java.beans.beancontext",
-        "java.instrument/java.lang.instrument", "java.logging/java.util.logging", "java.management/java.lang.management",
-        "java.prefs/java.util.prefs", "java.rmi/java.rmi", "java.rmi/java.rmi.activation", "java.rmi/java.rmi.dgc",
-        "java.rmi/java.rmi.registry", "java.rmi/java.rmi.server", "java.sql/java.sql"
-].collect {"--add-opens=$it=ALL-UNNAMED".toString()}
 
 bootRun {
     ignoreExitValue true
